<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="startChar">E</string>
    <string name="notFoundMessage">Nothing found. If you got this after photo recognition - try again with more accurate photo.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="appName">ENumbers</string>
    <string name="developer">by Iuliia Ashomok</string>
    <string name="email" translatable="false">email</string>
    <string name="my_email" translatable="false">ashomokdev@gmail.com</string>
    <string name="version">version</string>
    <string name="safe">safe</string>
    <string name="use_with_caution">use with caution</string>
    <string name="unsafe">unsafe</string>
    <string name="unknown">unknown</string>
    <string name="cancel">Cancel</string>
    <string name="exit_dialog_title">Do you want to exit?</string>
    <string name="recognition">Recognition…</string>
    <string name="permissions_needs">Permission needs!</string>
    <string name="camera_error">Your device not support this feature</string>
    <string name="alert_dialog_exit">Exit</string>
    <string name="make_photo_with_ingredients">Make photo with Ingredients:</string>
    <string name="ok">OK</string>
    <string name="requirement">Requirement</string>
    <string name="code">code</string>
    <string name="forbidden_for_children">forbidden for children</string>
    <string name="name">Name:</string>
    <string name="countries_banned_in">Countries, banned in:</string>
    <string name="countries_approved_in">Countries, approved in:</string>
    <string name="purpose">Purpose:</string>
    <string name="status">Status:</string>
    <string name="typical_products">Typical products:</string>
    <string name="additional_info">Additional info:</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-5221781428763224/8597149992</string>
    <string name="categories">Categories</string>
    <string name="about">About</string>
    <string name="rate">Rate</string>
    <string name="more_apps">More our apps</string>
    <string name="antioxidants">Antioxidants &amp; acidity regulators</string>
    <string name="flavour_enhancers">Flavour enhancers</string>
    <string name="pH_regulators">pH regulators &amp; anti-caking agents</string>
    <string name="thickeners">Thickeners, stabilisers &amp; emulsifiers</string>
    <string name="preservatives">Preservatives</string>
    <string name="colours">Colours</string>
    <string name="antibiotics">Antibiotics</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="additional_chemicals">Additional chemicals. New chemicals that do not fall into standard classification schemes.</string>
    <string name="copied">Copied</string>
    <string name="data_sources">Data sources:</string>
    <string name="data_source_1" translatable="false">&#8226; http://en.wikipedia.org/wiki/E_number</string>
    <string name="data_source_3" translatable="false">&#8226; http://nac.allergyforum.com/additives</string>
    <string name="ocr_header">Photo feature explanation:</string>
    <string name="ocr_explanation">Detecting E numbers from photo works in test mode. \nMake photo of text, which contains E numbers and press \'Recognize\' button. Wait while recognition completed.  \nFor better result provide high-quality photo.</string>
    <string name="all">All</string>
    <string name="oranges">oranges</string>
    <string name="yellows">yellows</string>
    <string name="reds">reds</string>
    <string name="greens">greens</string>
    <string name="sorbates">sorbates</string>
    <string name="benzoates">benzoates</string>
    <string name="sulphites">sulphites</string>
    <string name="nitrates">nitrates</string>
    <string name="lactates">lactates</string>
    <string name="others">others</string>
    <string name="phosphates">phosphates</string>
    <string name="alginates">alginates</string>
    <string name="silicates">silicates</string>
    <string name="inosinates">inosinates</string>
    <string name="waxes">waxes</string>
    <string name="sweeteners">sweeteners</string>
    <string name="foaming">foaming agents</string>
    <string name="packaging">packaging gases</string>
    <string name="improving">improving agents</string>
    <string name="synthetic">synthetic glazes</string>
    <string name="glutamates">glutamates &amp; guanylates</string>
    <string name="stearates">stearates &amp; gluconates</string>
    <string name="alkali">alkali metal compounds</string>
    <string name="sulphates">sulphates &amp; hydroxides</string>
    <string name="chlorides">chlorides &amp; sulphates</string>
    <string name="mineral">mineral acids &amp; bases</string>
    <string name="fatty">fatty acids &amp; compounds</string>
    <string name="cellulose">cellulose compounds</string>
    <string name="natural">natural emulsifiers</string>
    <string name="polyoxyethene">polyoxyethene compounds</string>
    <string name="other_natural">other natural agents</string>
    <string name="natural_gums">natural gums</string>
    <string name="succinates">succinates &amp; fumarates</string>
    <string name="malates">malates &amp; adipates</string>
    <string name="citrates">citrates &amp; tartrates</string>
    <string name="gallates">gallates &amp; erythorbates</string>
    <string name="Tocopherol">Tocopherol (vitamin E)</string>
    <string name="ascorbates">ascorbates (vitamin C)</string>
    <string name="propionates">propionates(propanoates)</string>
    <string name="acetates">acetates(ethanoates)</string>
    <string name="phenols">phenols &amp; formates(methanoates)</string>
    <string name="gold">gold and others</string>
    <string name="browns">browns &amp; blacks</string>
    <string name="blues">blues &amp; violets</string>
    <string name="cant_open">Can\'t open.</string>
    <string name="search_by_names">Search by names</string>
    <string name="only_one_name">Only one name allowed</string>
    <string name="adsfree_version">Ads-free version</string>
    <string name="five_stars">5 stars</string>
    <string name="share">Share</string>
    <string name="thank_you_for_your_support">Thank you for your support!</string>
    <string name="times_app_was_used" translatable="false">times_app_was_used</string>
    <string name="rate_app_dialog_title">Rate app</string>
    <string name="share_opinion">Please share your opinion</string>
    <string name="later">Later</string>
    <string name="never">Never</string>
    <string name="facebook_app_id" translatable="false">545799258957389</string>
    <string name="not_avalible">You disabled this feature</string>
    <string name="camera_not_found">Camera not found</string>
    <string name="appID" translatable="false">ca-app-pub-5221781428763224~7737821599</string>
    <string name="allow_permissions">Please allow the permissions, otherwise this feature will not work.</string>
    <string name="have_you_get">Have you get useful info?</string>
    <string name="share_message">Hi! This app was useful for me. It helps to eat safe food.
        You can get full info about ALL chemical additives in the food.
        You can download it for free here  %1$s Be healthy!
</string>
    <string name="share_via">Share via</string>
    <string name="i_want_to_recommend">I want to recommend you next:</string>
    <string name="details">Details</string>
    <string name="recognizing">Recognizing</string>
    <string name="ads_free_version_header">This is free version with ads</string>
    <string name="ads_free_version_explanation">Hate ads? We too. \nIf you like this app, please support a developer.</string>
    <string name="buy_paid">Buy ads-free version.</string>
    <string name="privacy_policy_agreement">Privacy Policy agreement</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_explanation">Using this app you agreed with our Privacy Policy.</string>
</resources>

