<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/data_layout">

    <include android:id="@+id/toolbar_details_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             layout="@layout/toolbar"/>
    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="vertical"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="fill"
                      android:layout_marginTop="@dimen/layout_margin"
                      android:layout_marginBottom="@dimen/layout_margin"
                      android:layout_marginLeft="@dimen/layout_margin"
                      android:layout_marginRight="@dimen/layout_margin"
                >

            <TextView
                    android:id="@+id/eCodeFull"
                    android:text="@string/code"
                    android:gravity="center"
                    style="@style/ECode_Big"
                    />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:id="@+id/danger_level_layout"
                          android:orientation="horizontal"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                    >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/danger_level_flag_layout">
                    <include android:id="@+id/enumbFlag_details_layout"
                             layout="@layout/enumb_flag"
                             android:gravity="center"
                            />

                    <TextView
                            android:id="@+id/eDangerLevelFull"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/unsafe"
                            style="@style/TextForFlags"
                            />
                </LinearLayout>
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/forbidden_for_children_flag_layout">
                    <ImageView
                            android:layout_marginLeft="25dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/flag_forbidden_for_children"
                            android:padding="@dimen/flag_margin"
                            android:paddingTop="@dimen/flag_margin"
                            android:gravity="center"/>
                    <TextView
                            android:id="@+id/eForbddenForChildrenFull"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/forbidden_for_children"
                            style="@style/TextForFlags"
                            />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/details_layout_ename_layout"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        style="@style/Label"
                        />
                <TextView
                        android:id="@+id/eNameFull"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/BasicText"
                        />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/details_layout_ebanned_in_layout"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/countries_banned_in"
                        style="@style/Label"
                        />
                <TextView
                        android:id="@+id/ebanned_inFull"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/BasicText"
                        />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/details_layout_eapproved_in_layout"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/countries_approved_in"
                        style="@style/Label"
                        />
                <TextView
                        android:id="@+id/eapproved_inFull"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/BasicText"
                        />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/details_layout_epurpose_layout"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/purpose"
                        style="@style/Label"
                        />
                <TextView
                        android:id="@+id/ePurposeFull"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/BasicText"
                        />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/details_layout_estatus_layout"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        style="@style/Label"
                        />
                <TextView
                        android:id="@+id/eStatusFull"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/BasicText"
                        />
            </LinearLayout>


            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/details_layout_etypical_products_layout"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/typical_products"
                        style="@style/Label"
                        />
                <TextView
                        android:id="@+id/etypical_productsFull"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/BasicText"
                        />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/details_layout_eadditional_info_layout"
                    android:orientation="vertical"
                    android:layout_marginBottom="20dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/additional_info"
                        style="@style/Label"
                        />
                <TextView
                        android:id="@+id/additional_infoFull"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/BasicTextSmaller"
                        />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adBannerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>

</LinearLayout>
